--- a/package.json
+++ b/package.json
@@ -23,14 +23,22 @@
     "dependencies": {
         "@nestjs/common": "^7.5.1",
         "@nestjs/core": "^7.5.1",
+        "@nestjs/jwt": "^7.2.0",
         "@nestjs/mapped-types": "^0.3.0",
         "@nestjs/mongoose": "^7.2.3",
+        "@nestjs/passport": "^7.1.5",
         "@nestjs/platform-express": "^7.5.1",
         "@nestjs/swagger": "^4.7.13",
         "@nestjs/typeorm": "^7.1.5",
+        "@types/passport": "^1.0.6",
+        "bcryptjs": "^2.4.3",
+        "class-transformer": "^0.4.0",
+        "class-validator": "^0.13.1",
         "moment": "^2.29.1",
         "mongodb": "^3.6.4",
         "mongoose": "^5.11.16",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
         "reflect-metadata": "^0.1.13",
         "request": "^2.88.2",
         "request-promise": "^4.2.6",
